full functionality and styling

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,7 @@
 
 					{{#unless devoured}}
 
-						{{> burgers/burgers-block}}
+						{{> burgers/to-eat-block}}
 
 					{{/unless}}
 
@@ -40,7 +40,7 @@
 
 					{{#if devoured}}
 
-						{{> burgers/burgers-block}}
+						{{> burgers/eaten-block}}
 
 					{{/if}}
 
