--- a/public/assets/css/skeleton.css
+++ b/public/assets/css/skeleton.css
@@ -288,9 +288,9 @@ label > .label-body {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-  list-style: circle inside; }
+  list-style: none; }
 ol {
-  list-style: decimal inside; }
+  list-style: none; }
 ol, ul {
   padding-left: 0;
   margin-top: 0; }
