--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,13 +15,13 @@ body {
 	line-height: 1.7;
 	box-sizing: border-box;
 	text-align: center;
-/*	background-size: cover;
+	background-size: cover;
 	background-position: top;
 	background-image: linear-gradient(
-		to right bottom,
+		to left bottom,
 		rgba(227, 225, 232, 0.6),
-		rgba(227, 225, 232, 0.6)),
-	url(../css/burgerBackground.jpg);*/
+		rgba(227, 225, 232, 0.9)),
+	url('../images/burgerBackground.jpg');
 	font-family: 'Mukta Mahee', sans-serif;
 }
 
@@ -39,6 +39,21 @@ body {
 
 .section__to-eat {
 	margin: 0 auto;
+	text-align: right;
+	padding-right: 4rem; 
+}
+
+.section__to-eat button {
+	margin-left: 1.5rem;
+}
+
+.section__eaten {
+	text-align: left;
+	padding-left: 4rem; 
+}
+
+.section__eaten li {
+	color: #777;
 }
 
 .item {
