--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,7 +58,7 @@
 		
 			<input type="text" id="form__user-input" name="name">
 
-			<p>Enter the burger you fancy then click the submit button</p>
+			<p id="form__text">Enter the burger you fancy then click the submit button</p>
 
 			<button class="form__submit-btn">Submit</button>
 
